Fixed bags with scrollbar color

--- a/src/sass/elements/_filter.scss
+++ b/src/sass/elements/_filter.scss
@@ -29,7 +29,7 @@
 		width: 8px;
 		height: 114px;
 		border-radius: 12px;
-		border: 12px solid $scroll-color;
+		border: 12px solid $scrollbar-color-light;
 	}
 }
 
